
 386.	[bug]		Missing strdup() of ACL name caused random
			ACL matching failures [RT #228].

 385.	[cleanup]	Removed functions dns_zone_equal(), dns_zone_print(),
			and dns_zt_print().

 384.	[bug]		nsupdate was incorrectly limiting TTLs to 65535 instead
			of 2147483647.

 383.	[func]		When writing a master file, print the SOA and NS
			records (and their SIGs) before other records.

 382.	[func]		The function dns_zone_setdbtype() now takes
			an argc/argv style vector of words and sets 
			both the zone database type and its arguments,
			making the functions dns_zone_adddbarg()
			and dns_zone_cleardbargs() unnecessary.

 382.	[bug]		named -u failed on Debian Linux.

 381.	[bug]		Check for IPV6_RECVPKTINFO and use it instead of
			IPV6_PKTINFO if found. [RT #229]

 380.	[bug]		nsupdate didn't work with IPv6.

 379.	[func]		New library function isc_sockaddr_anyofpf().

 378.	[func]		named and lwresd will log the command line arguments
			they were started with in the "starting ..." message.

 377.	[bug]		When additional data lookups were refused due to 
			"allow-query", the databases were still being
			attached causing reference leaks.

 376.	[bug]		The server should always use good entropy when
			performing cryptographic functions needing entropy.

 375.	[bug]		Per-zone "allow-query" did not properly override the
			view/global one for CNAME targets and additional
			data [RT #220].

 374.	[bug]		SOA in authoritative negative responses had wrong TTL.

 373.	[func]		nslookup is now installed by "make install".

 372.	[bug]		Deal with Microsoft DNS servers appending two bytes of
			garbage to zone transfer requests.

 371.	[bug]		At high debug levels, doing an outgoing zone transfer
			of a very large RRset could cause an assertion failure
			during logging.

 370.	[bug]		The error messages for rollforward failures were
			overly terse.

 369.	[func]		Support new named.conf options, view and zone 
			statements: 

				max-retry-time, min-retry-time, 